<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_white_background"
    android:padding="@dimen/dp_10">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/login"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="22dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/black_border"
        android:layout_marginTop="@dimen/dp_10"
        android:padding="@dimen/dp_15">

        <TextView
            android:id="@+id/us_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black_text"
            android:textSize="16dp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/edittext_border"
            android:hint="@string/email"
            android:layout_marginTop="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_10"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_view"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/ps_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/edittext_border"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/dp_5"
            android:inputType="textPassword"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_view"
            android:textSize="@dimen/sp_14" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15">


            <CheckBox
                android:id="@+id/rememberme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:padding="2dp"

                android:text="@string/remember"
                android:textColor="@color/black_text"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:id="@+id/forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black_text"
                android:textSize="@dimen/sp_14"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15">

            <Button
                android:id="@+id/signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:background="@color/sign_bt_background"
                android:textColor="@color/white"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textAllCaps="false"
                android:layout_alignParentLeft="true"
                android:textSize="@dimen/sp_14"/>

            <Button
                android:textAllCaps="false"
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:background="@color/register_bt_background"
                android:textColor="@color/white"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/sp_14"/>


        </RelativeLayout>
    </LinearLayout>

</LinearLayout>