<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/offwhite">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp_10">

            <TextView
                android:id="@+id/reg_title"
                android:layout_width="374dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/black_border"
                android:orientation="vertical"
                android:padding="@dimen/dp_15">


                <TextView
                    android:id="@+id/user_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/dp_15"
                    android:text="@string/username"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_15"
                    android:background="@drawable/edittext_border"
                    android:hint="@string/username"
                    android:paddingLeft="@dimen/dp_10"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/email_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/dp_15"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_15"
                    android:background="@drawable/edittext_border"
                    android:hint="@string/email"
                    android:paddingLeft="@dimen/dp_10"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/ps_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/dp_15"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_15"
                    android:background="@drawable/edittext_border"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/con_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/dp_15"
                    android:text="@string/confirmpassword"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

                <EditText
                    android:id="@+id/conf_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_15"
                    android:background="@drawable/edittext_border"
                    android:hint="@string/confirmpassword"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/ph_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/dp_15"
                    android:text="@string/phone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_15"
                    android:background="@drawable/edittext_border"
                    android:hint="@string/phone"
                    android:paddingLeft="@dimen/dp_10"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/sp_14" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15">

                    <Button
                        android:id="@+id/registerfornewuser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:background="@color/green"
                        android:paddingLeft="@dimen/dp_10"
                        android:paddingRight="@dimen/dp_10"
                        android:text="@string/register"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_14" />

                    <Button
                        android:id="@+id/signIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@color/red"
                        android:paddingLeft="@dimen/dp_10"
                        android:paddingRight="@dimen/dp_10"
                        android:text="@string/signin"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_14" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>